Subgradient method for constrained optimization

--- a/JuliaCodes/Projected Subgradient Method - Least l1-norm.ipynb
+++ b/JuliaCodes/Projected Subgradient Method - Least l1-norm.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "Julia",
   "name": "",
-  "signature": "sha256:dc41f8dd633a779bf143f9976e0fe22aafbf1957c7e7e44ecea50ffe4ccca2b4"
+  "signature": "sha256:19ad24b12a434b7b11a859603e1c23c7eca54498e7eda8cb41d2d3dd39772793"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -24,7 +24,7 @@
       "\\begin{align}\n",
       "x^{(k+1)}=\\Pi(x^{(k)}-\\alpha_k g^{(k)}),\n",
       "\\end{align}\n",
-      "where $\\Pi$ is the Eucledian projection on $\\mathcal{C}$ and $g^{(k)} \\in \\partial f(x^{k})$. Projected subgradient method converges square summable but nonsummable sequence.\n",
+      "where $\\Pi$ is the Eucledian projection on $\\mathcal{C}$ and $g^{(k)} \\in \\partial f(x^{k})$. Projected subgradient method converges for square summable but nonsummable sequence.\n",
       "\n",
       "For an example of the projected subgradient method, we will consider the following problem\n",
       "\\begin{align}\n",
