Tex rendering issue

--- a/JuliaCodes/Projected Subgradient Method - Least l1-norm.ipynb
+++ b/JuliaCodes/Projected Subgradient Method - Least l1-norm.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "Julia",
   "name": "",
-  "signature": "sha256:19ad24b12a434b7b11a859603e1c23c7eca54498e7eda8cb41d2d3dd39772793"
+  "signature": "sha256:9d80b6d3dbbc8844585074d7c9c73c34bcb37860597b58f0c1d7d00f011dab55"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -16,22 +16,29 @@
       "## Projected subgradient method\n",
       "\n",
       "Projected subgradient method solves the following problem:\n",
+      "\n",
       "\\begin{align}\n",
       "&\\textrm{minimize} \\quad f(x) \\\\\n",
       "&\\textrm{subject to}\\quad x \\in \\mathcal{C},\n",
       "\\end{align}\n",
+      "\n",
       "where $\\mathcal{C}$ is a convex set. The projected subgradient algorithm is given by \n",
+      "\n",
       "\\begin{align}\n",
       "x^{(k+1)}=\\Pi(x^{(k)}-\\alpha_k g^{(k)}),\n",
       "\\end{align}\n",
+      "\n",
       "where $\\Pi$ is the Eucledian projection on $\\mathcal{C}$ and $g^{(k)} \\in \\partial f(x^{k})$. Projected subgradient method converges for square summable but nonsummable sequence.\n",
       "\n",
       "For an example of the projected subgradient method, we will consider the following problem\n",
+      "\n",
       "\\begin{align}\n",
       "&\\textrm{minimize} \\quad \\|x\\|_1 \\\\\n",
       "&\\textrm{subject to}\\quad A x=b.\n",
       "\\end{align}\n",
+      "\n",
       "Subgradient of the objective is $g=\\mathop{\\bf sign}(x)$, and the projected subgradient update can be shown to be equal to\n",
+      "\n",
       "\\begin{align}\n",
       "x^{(k+1)}=x^{(k)}-\\alpha_k (I-A^T (A A^T)^{-1} A) \\mathop{\\bf sign}(x^{(k)}).\n",
       "\\end{align}\n",
@@ -554,7 +561,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Finally we plot $f_\\textrm{best}^{k}$ versus $k$."
+      "Finally we plot $f_\\textrm{best}^{(k)}$ versus $k$."
      ]
     },
     {
