--- a/JuliaCodes/Subgradient Method for Constrained Optimization.ipynb
+++ b/JuliaCodes/Subgradient Method for Constrained Optimization.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "Julia",
   "name": "",
-  "signature": "sha256:30c1b241d44d43904d601d0d9303ae5c905159d2f832792985f6cf5be6fc7d95"
+  "signature": "sha256:8f9ce97de745330c780ca79a2934004dafbf541021524ac5c760f47c10f450e9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -14,15 +14,21 @@
      "metadata": {},
      "source": [
       "We consider the implementation of alternate subgradient method which solves the following optimization problem:\n",
+      "\n",
       "\\begin{align}\n",
       "&\\textrm{minimize} \\quad f_0(x) \\\\\n",
       "&\\textrm{subject to} \\quad \\forall i \\in \\{1,\\ldots,m\\} \\quad f_i(x)\\leq0,\n",
       "\\end{align}\n",
+      "\n",
       "where $f_i:\\mathbb{R}^n \\rightarrow \\mathbb{R}$ are convex. The update rule is the same as seen before:\n",
+      "\n",
       "\\begin{align}\n",
       "x^{(k+1)}=x^{(k)}-\\alpha_{k} g^{(k)},\n",
       "\\end{align}\n",
-      "however, now $g^{(k)}$ will depend on the feasibility of the current point $x^{k}$. Suppose, $h(x)=\\textrm{max}_{i \\in \\{1,\\ldots,m\\}}{f_i(x)}$. Then,\n",
+      "\n",
+      "however, now $g^{(k)}$ will depend on the feasibility of the current point $x^{k}$. Suppose,\n",
+      "$h(x)=\\textrm{max}_{i \\in \\{1,\\ldots,m\\}}{f_i(x)}$. Then,\n",
+      "\n",
       "\\begin{align}\n",
       "g^{(k)}=\\begin{cases}\n",
       " \\partial f_0(x^{(k)}), \\; &\\textrm{if} \\; h(x^{(k)})\\leq0, \\; \\textrm{i.e.,} \\; x^{(k)} \\; \\textrm{feasible}\\\\\n",
@@ -31,6 +37,7 @@
       "\\end{align}\n",
       "\n",
       "The step lengths are chosen as\n",
+      "\n",
       "\\begin{align}\n",
       "\\alpha_k=\\begin{cases}\n",
       " (f_0(x^{(k)})-f^*)/\\|g^{(k)}\\|_2^2, \\; &\\textrm{if} \\; x^{(k)} \\; \\textrm{feasible} \\\\\n",
@@ -44,10 +51,12 @@
      "metadata": {},
      "source": [
       "We will apply the alternate subgradient method to a general form linear optimization problem.\n",
+      "\n",
       "\\begin{align}\n",
       "&\\textrm{minimize} \\quad c^T x \\\\\n",
       "&\\textrm{subject to} \\quad \\forall i \\in \\{1,\\ldots,m\\} \\quad a_i^T x \\leq b_i,\n",
       "\\end{align}\n",
+      "\n",
       "We generate the data in a manner that the problem has a finite optimum (otherwise we cannot test if the subgradient method is working!), i.e., the feasible set is nonempty and there is no extreme ray $d$ such that $c^T d < 0$. \n",
       "\n",
       "To ensure a nonempty feasible set we have a nonnegative $b=(b_1,\\ldots,b_m)$, so that $x=0$ is a feasible point. \n",
@@ -427,14 +436,6 @@
       }
      ],
      "prompt_number": 19
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
