--- a/JuliaCodes/Subgradient Method for Constrained Optimization.ipynb
+++ b/JuliaCodes/Subgradient Method for Constrained Optimization.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "Julia",
   "name": "",
-  "signature": "sha256:8f9ce97de745330c780ca79a2934004dafbf541021524ac5c760f47c10f450e9"
+  "signature": "sha256:57980f8c58e48644d3b8f209decb1e92a1b202b773541c477dc02661335e05f3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -182,7 +182,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Function that will implement projected subgradient method\n",
+      "# Function that will implement alternate subgradient method\n",
       "# ---------------------------------------------------------\n",
       "function alternate_subgradient_ineq_LP(\n",
       "    A::Array{Float64,2},\n",
