Projected Subgradient for Dual Problem

--- a/JuliaCodes/3. Projected Subgradient Method for Dual Problem.ipynb
+++ b/JuliaCodes/3. Projected Subgradient Method for Dual Problem.ipynb
@@ -6,10 +6,13 @@
    "source": [
     "EE364b Convex Optimization II, S. Boyd\n",
     "\n",
-    "Written by Shuvomoy Das Gupta\n",
-    "\n",
-    "-------------------\n",
-    "\n",
+    "Written by Shuvomoy Das Gupta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We want to solve the dual of the following problem using projected subgradient method:\n",
     "\n",
     "$$\n",
@@ -18,7 +21,7 @@
     "& \\text{subject to} \\quad x_i^2 \\leq 1, \\quad \\forall i \\in \\{1,2,\\ldots,n\\}, \n",
     "\\end{align}\n",
     "$$\n",
-    "where, $P$ is a positive definite matrix.\n"
+    "where, $P$ is a positive definite matrix."
    ]
   },
   {
